# twitch-live-notification-to-discord-webhook

./: Cargo.toml  README.md
public/: styles.css
src/: main.rs  message_verification.rs  sub_management.rs  twitch_messages.rs
templates/: base.html  index.html  login.html  macros.html
