[package]
name = "slimy-discord-notifs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros", "multipart"]}
hmac = "0.12.1"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sha2 = "0.10.8"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tera = "1.20.0"
tokio = "1.28.2"
axum-extra = { version = "0.9.3", features = ["cookie-private", "cookie", "typed-header"] }
futures = "0.3.30"
